--- a/Contra.vcxproj
+++ b/Contra.vcxproj
@@ -133,6 +133,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AirCraft.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Animations.cpp" />
     <ClCompile Include="Bill.cpp" />
@@ -140,7 +141,14 @@
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="BillInputHandler.cpp" />
     <ClCompile Include="CircularGun.cpp" />
+    <ClCompile Include="Collision.cpp" />
+    <ClCompile Include="GunRotation.cpp" />
+    <ClCompile Include="RifleBullet.cpp" />
     <ClCompile Include="CurcularBullet.cpp" />
+    <ClCompile Include="FireBullet.cpp" />
+    <ClCompile Include="FireGun.cpp" />
+    <ClCompile Include="Grass.cpp" />
+    <ClCompile Include="LAirCraft.cpp" />
     <ClCompile Include="NormalGun.cpp" />
     <ClCompile Include="Falcon.cpp" />
     <ClCompile Include="Gun.cpp" />
@@ -150,20 +158,34 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="RifleGun.cpp" />
+    <ClCompile Include="HiddenSniper.cpp" />
+    <ClCompile Include="Sniper.cpp" />
+    <ClCompile Include="Soldier.cpp" />
+    <ClCompile Include="SpreadGun.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Sprites.cpp" />
     <ClCompile Include="Textures.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AirCraft.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="AnimationFrame.h" />
     <ClInclude Include="Animations.h" />
+    <ClInclude Include="AssetID.h" />
     <ClInclude Include="Bill.h" />
     <ClInclude Include="BillBullet.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="BillInputHandler.h" />
     <ClInclude Include="CircularGun.h" />
+    <ClInclude Include="Collision.h" />
+    <ClInclude Include="GunRotation.h" />
+    <ClInclude Include="RifleBullet.h" />
     <ClInclude Include="CurcularBullet.h" />
+    <ClInclude Include="FireBullet.h" />
+    <ClInclude Include="FireGun.h" />
+    <ClInclude Include="Grass.h" />
+    <ClInclude Include="LAirCraft.h" />
     <ClInclude Include="NormalGun.h" />
     <ClInclude Include="Falcon.h" />
     <ClInclude Include="Gun.h" />
@@ -172,6 +194,11 @@
     <ClInclude Include="debug.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="RifleGun.h" />
+    <ClInclude Include="HiddenSniper.h" />
+    <ClInclude Include="Sniper.h" />
+    <ClInclude Include="Soldier.h" />
+    <ClInclude Include="SpreadGun.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Sprites.h" />
     <ClInclude Include="Texture.h" />
