Add_RockFall_Class

--- a/Contra.vcxproj.filters
+++ b/Contra.vcxproj.filters
@@ -117,6 +117,12 @@
     <ClCompile Include="Sniper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RockFall.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Bridge.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="debug.h">
@@ -222,6 +228,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Sniper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RockFall.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bridge.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
