Add: Stage 1 map (STILL BUG AT TILEMAP)

--- a/Contra.vcxproj.filters
+++ b/Contra.vcxproj.filters
@@ -279,4 +279,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Resources\Map\stage1_tilemap.txt" />
+  </ItemGroup>
 </Project>
