--- a/Contra.vcxproj.filters
+++ b/Contra.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="BossStage1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BlockObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="debug.h">
@@ -276,6 +279,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BossStage1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BlockObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
